# msgraph-sdk-python-core

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .pypirc  .release-please-manifest.json  .style.yapf  CHANGELOG.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Pipfile  README.md  README.rst  dev_requirements.txt  isort.cfg  mypy.ini  pyproject.toml  release-please-config.json  requirements-dev.txt  setup.py
.azure-pipelines/: cd-publish-python.yml  daily-ci-build.yml
.azurepipelines/: build.yml
.config/1espt/: PipelineAutobaseliningConfig.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  RELEASE-TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/policies/: msgraph-sdk-python-core-branch-protection.yml  msgraph-sdk-python-core.yml
.github/workflows/: auto-merge-dependabot.yml  build.yml  build_publish.yml  ci.yml  codeql-analysis.yml  codeql.yml  conflicting-pr-label.yml  project-auto-add.yml  publish.yml  python.yml  release-please-gha.yml  release.yml
docs/: conf.py  index.rst
docs/design/: client_factory.puml
msgraph/: __init__.py
msgraph/core/: __init__.py  _client_factory.py  _constants.py  _graph_client.py  client_factory.py  constants.py  graph_client.py  graph_client_factory.py  graph_request_adapter.py
msgraph/core/middleware/: __init__.py  abc_token_credential.py  authorization.py  logger.py  middleware.py  redirect.py  request_context.py  retry.py  telemetry.py
msgraphcore/: __init__.py  client_factory.py  constants.py  enums.py  graph_client.py  graph_session.py
msgraphcore/core/: graph_session.py
msgraphcore/middleware/: _base_auth.py  _middleware.py  abc_token_credential.py  authorization.py  authorization_handler.py  authorization_provider.py  logger.py  middleware.py  redirect_middleware.py  request_context.py  retry_middleware.py  telemetry.py  utils.py
msgraphcore/middleware/options/: auth_middleware_options.py  constants.py  middleware_control.py  redirect_middleware_options.py  retry_middleware_options.py  telemetry_middleware_options.py
samples/: client_factory_samples.py  graph_client_samples.py  retry_handler_samples.py  samples.py
samples/batch_requests/: batch_body_with_bytes_content.py  batch_get_response_body_as_stream.py  batch_request_with_collection.py  batch_request_with_content.py  batch_request_with_custom_error_class.py  batch_request_with_depends_on.py  batch_request_with_parsable_as_response_type.py  batch_response_get_status_codes.py
src/: constants.py
src/core/: _middleware.py  graph_session.py  http_client_factory.py  middleware_pipeline.py
src/middleware/: _base.py  _middleware.py  authorization_handler.py  authorization_provider.py
src/middleware/options/: auth_middleware_options.py  constants.py  middleware_control.py
src/msgraph_core/: __init__.py  _constants.py  _enums.py  base_graph_request_adapter.py  graph_client_factory.py
src/msgraph_core/authentication/: __init__.py  azure_identity_authentication_provider.py
src/msgraph_core/middleware/: __init__.py  async_graph_transport.py  request_context.py  telemetry.py
src/msgraph_core/middleware/options/: __init__.py  graph_telemetry_handler_option.py
src/msgraph_core/models/: __init__.py  large_file_upload_create_session.py  large_file_upload_create_session_body.py  large_file_upload_session.py  page_result.py  upload_result.py
src/msgraph_core/requests/: batch_request_builder.py  batch_request_content.py  batch_request_content_collection.py  batch_request_item.py  batch_response_content.py  batch_response_content_collection.py  batch_response_item.py
src/msgraph_core/tasks/: __init__.py  large_file_upload.py  page_iterator.py
src/sdk_core_env/: pyvenv.cfg
src/sdk_core_env/Scripts/: activate  activate.bat
tests/: conftest.py  test_base_graph_request_adapter.py  test_enums.py  test_graph_client_factory.py  test_http_client.py  test_http_client_factory.py  test_middleware_pipeline.py
tests/authentication/: test_azure_identity_authentication_provider.py
tests/integration/: test_graphclient.py  test_http_client_factory.py  test_middleware_pipeline.py  test_pipeline.py  test_retry.py  test_retry_middleware.py  test_telemetry.py  test_telemetry_middleware.py
tests/middleware/: test_async_graph_transport.py  test_graph_telemetry_handler.py
tests/middleware/options/: test_graph_telemetry_handler_options.py
tests/requests/: test_batch_request_content.py  test_batch_request_content_collection.py  test_batch_request_item.py  test_batch_response_content.py  test_batch_response_item.py
tests/tasks/: test_page_iterator.py  test_page_result.py
tests/unit/: test_async_graph_transport.py  test_auth_handler.py  test_base_graph_request_adapter.py  test_client_factory.py  test_graph_auth_handler.py  test_graph_client.py  test_graph_client_factory.py  test_graph_middleware_pipeline.py  test_graph_redirect_handler.py  test_graph_request_adapter.py  test_graph_retry_handler.py  test_graph_session.py  test_graph_telemetry_handler.py  test_http_client.py  test_http_client_factory.py  test_middleware_options.py  test_middleware_pipeline.py  test_redirect_handler.py  test_retry_handler.py  test_telemetry_handler.py
