[build-system]
requires = ["flit_core >=3.5,<4", "requests >= 2.27.0"]
build-backend = "flit_core.buildapi"

[project]
name = "msgraph-core"
authors = [{name = "Microsoft", email = "graphtooling+python@microsoft.com"}]
dependencies = [
    "requests >= 2.27.0",
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["msgraph", "openAPI", "Microsoft", "Graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version", "description"]

[project.urls]
homepage = "https://github.com/microsoftgraph/msgraph-sdk-python-core#readme"
repository = "https://github.com/microsoftgraph/msgraph-sdk-python-core"
documentation = "https://github.com/microsoftgraph/msgraph-sdk-python-core/docs"

[tool.flit.module]
name = "msgraph"

[tool.mypy]
warn_unused_configs = true
files = "msgraph"
ignore_missing_imports = true

[tool.yapf]
based_on_style = "pep8"
dedent_closing_brackets = true
each_dict_entry_on_separate_line = true
column_limit = 100

[tool.isort]
profile = "hug"
